[package]
name = "text-generation-backends-vllm"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1.83"
clap = { version = "4.5.21", features = ["derive"] }
pyo3 = { workspace = true }
text-generation-router = { path = "../../router" }
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
