[package]
name = "text-generation-backends-vllm"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1.83"
clap = { version = "4.5.21", features = ["derive"] }
pyo3 = { workspace = true }
text-generation-router = { path = "../../router" }
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1.11.0", features = ["v4"] }
log = "0.4.22"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
