[package]
name = "text-generation-client"
version = "0.2.0"
edition = "2021"

[dependencies]
futures = "^0.3"
prost = "^0.9"
thiserror = "^1.0"
tokio = { version = "^1.21", features = ["sync"] }
tonic = "^0.6"
tower = "^0.4"
tracing = "^0.1"
tracing-error = "^0.2"

[build-dependencies]
tonic-build = "0.6.2"
