[package]
name = "text-generation-client"
version = "0.3.0"
edition = "2021"

[dependencies]
futures = "^0.3"
grpc-metadata = { path = "../grpc-metadata" }
prost = "^0.11"
thiserror = "^1.0"
tokio = { version = "^1.25", features = ["sync"] }
tonic = "^0.8"
tower = "^0.4"
tracing = "^0.1"
tracing-error = "^0.2"

[build-dependencies]
tonic-build = "0.8.4"
prost-build = "0.11.6"
